# xdr-poc-script

./: .gitignore  DNS_TUNNEL_METRIC_AUDIT.md  MASTER-WBS-Version-1.2-Discovery-Execution-Model.md  MASTER-WBS-v1.2-Revised.md  PRODUCT-CHARTER-Version-1.2-Discovery-Execution-Model.md  PRODUCT-CHARTER-v1.2-Final.md  README.md  RELEASE_1_0_LAB_GUIDE.md  RELEASE_1_0_SUMMARY.md  RELEASE_NOTES.md  WORKSPACE_BOUNDARY.md  dsp-menu.sh  install-dsp.sh  pyproject.toml  stellar_poc.sh  stellar_poc_followup.sh  stellar_poc_humanize.sh
SQL_Injection_CSV/: External Suspected SQL Injection Documents - Tue Jun 23 2026.csv  Internal Suspected SQL Injection Documents - Tue Jun 23 2026.csv
detection-scenario-platform/: ARCHITECTURE_COMPLIANCE_CHECKLIST.md  ARCHITECTURE_SPEC.md  DEFINITION_OF_DONE.md  DETECTION_ADAPTER_LAYER.md  DETECTION_CATALOG.md  DETECTION_CONFIDENCE_MODEL.md  DETECTION_COVERAGE_REVIEW.md  DETECTION_EVIDENCE_CATALOG.md  DETECTION_GAP_ANALYSIS.md  DETECTION_GAP_REASSESSMENT.md  DETECTION_VALIDATION_PLAN.md  EVENT_SCHEMA_FREEZE.md  EVENT_STORE_ACCEPTANCE_SPEC.md  EXECUTION_PROVIDER_SPEC.md  IMPLEMENTATION_RISK_REGISTER.md  LAB_VALIDATION_PROCEDURE.md  PATH_EQUALITY_VERIFICATION_SPEC.md  PHASE_0_1_ARCHITECTURE_REVIEW.md  PHASE_0_5_ARCHITECTURE_FREEZE_REVIEW.md  PHASE_0_6_IMPLEMENTATION_READINESS_REVIEW.md  PHASE_1_ACCEPTANCE_CRITERIA.md  PHASE_1_EXECUTION_PLAN.md  PHASE_6_5_REVIEW.md  PHASE_ROADMAP.md  PLUGIN_DISCOVERY_SPEC.md  PROJECT_CHARTER.md  PROTOCOL_LIBRARY_SPEC.md  README.md  RELEASE_1_0_LAB_GUIDE.md  RELEASE_1_0_SUMMARY.md  S3_CONFIRMATION_MATRIX.md  SKILL_SPEC.md  (+7 more)
(+646 files in other folders)
