[project]
name = "dsp"
version = "1.3.9"
description = "Detection Scenario Platform — Core Platform Skeleton (Phase 1A)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
dsp = "dsp.runner.cli:main"
dsp-remote-scenario = "dsp.runner.remote_scenario_cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dsp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "e2e: Release 1.0 end-to-end flow tests (local and webshell paths)",
]
